lab_3/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-1.0
  namespace: lab-vcsoft
  labels:
    app: hello
    version: "1.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
      version: "1.0"
  template:
    metadata:
      labels:
        app: hello
        version: "1.0"
    spec:
      containers:
        - name: hello
          image: gcr.io/google-samples/hello-app:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-2.0
  namespace: lab-vcsoft
  labels:
    app: hello
    version: "2.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
      version: "2.0"
  template:
    metadata:
      labels:
        app: hello
        version: "2.0"
    spec:      
      containers:
        - name: hello
          image: gcr.io/google-samples/hello-app:2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-3.0
  namespace: lab-vcsoft
  labels:
    app: hello
    version: "3.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
      version: "3.0"
  template:
    metadata:
      labels:
        app: hello
        version: "3.0"
    spec:      
      containers:
        - name: hello
          image: gcr.io/google-samples/hello-app:3.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
