lab_3/DestinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hello
spec:
  host: hello-svc
  subsets:
  - name: "v1"
    labels:
      version: "1.0"
  - name: "v2"
    labels:
      version: "2.0"
  - name: "v3"
    labels:
      version: "3.0"
